--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@ xmlns:tools="http://schemas.android.com/tools"
 
       <activity
         android:name=".MainActivity"
+        android:theme="@style/AppTheme" 
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
